<resources>
    <string name="app_name">Azmooneh</string>
    <string name="password_field">Enter Your Password</string>
    <string name="remembering">Remember Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="getting_username">inter your username</string>
    <string name="getting_password">inter your password</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="valid_acount">You have an acount ?</string>
    <string name="notValid">not valid</string>
    <string name="notValidText">user not valid ! do you want to sing up ?</string>
    <string name="cancel">cancel</string>
    <string name="valid">userValid</string>
    <string name="validText">username already was taken  do you want to sign in ?</string>
    <string name="Empty">Empty value</string>
    <string name="EmtyText">please fill all the blanks</string>
    <string name="OK">ok</string>
    <string name="sign_up_complete">sign Up complete!\\nplease sign in ...</string>
    <string name="unfinished">unfinished</string>
    <string name="finished">finished</string>
    <string name="status">status</string>
    <string name="exam_name">exam name</string>
    <string name="running">running</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="Exit">Exit</string>
    <string name="write_your_answer">write your answer.</string>
    <string name="exam_info">Exam info</string>
    <string name="date_and_time">Date and time</string>
    <string name="type">type</string>
    <string name="duration">duration</string>
    <string name="accept_terms">accept terms</string>
    <string name="start_exam">start Exam</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="exam_s_questions_s_count">exam\'s questions\'s count</string>
    <string name="test_text">test,text</string>
    <string name="save_changes">save changes</string>
    <string name="change_your_avatar">change avatar</string>
    <string name="write_a_question">write a question</string>
    <string name="choose_file">choose a file</string>
    <string name="save">save</string>
    <string name="enter_your_new_number">enter your new number</string>
    <string name="number">number</string>
    <string name="enter_your_firstname">enter your firstname</string>
    <string name="enter_your_lastname">enter your lastname</string>
    <string name="student_list">student list</string>
    <string name="question_list">question list</string>
    <string name="title_activity_profile" translatable="false">profileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="retype_new_password">retype new password</string>
    <string name="new_password">new password</string>
    <string name="text">text</string>
    <string name="_4_choice">4 choice</string>
    <string name="title_activity_file_question_edit" translatable="false">FileQuestionEdit</string>
    <string name="are_you_sure">are you sure ?</string>
    <string name="are_you_sure_message">are you sure to remove this question ?</string>
    <string name="yes">yes</string>
    <string name="No">No</string>
    <string name="question_Removed">question Removed</string>
    <string name="are_you_sure_messege_student">are you sure to remove this student ?</string>
    <string name="File">File</string>
    <string name="which">which one ?</string>
    <string name="which_message">which type of question do you want to add ?</string>
    <string name="Exam_added">Exam added</string>
    <string name="are_you_sure_exam">are you sure to remove this exam ?</string>
    <string name="minute">minute</string>
    <string name="warning">WARNING</string>
    <string name="not_formatted">Date or Time format is not correct</string>
    <string name="choose_type">please choose a type fot exam</string>
    <string name="write_duration">write a duration for exam</string>
    <string name="not_started">not started</string>
    <string name="grade">grade</string>
    <string name="grade_empty">grade must have a value</string>
    <string name="text_empty">question must have text</string>
    <string name="grade_invalid">grade is invalid</string>
    <string name="questions">Questions</string>
    <string name="question">question</string>
    <string name="enter_your_exam_name">Enter your exam name</string>
    <string name="write_name">write a name for exam</string>
    <string name="deny_text"><![CDATA[charactor & is denied]]></string>
    <string name="wrong_format">wrong format</string>
    <string name="wrong_format_message">grade must be a floating point number</string>
    <string name="grade_maxGrage">grade must be fewer than max grade</string>
    <string name="enter_mark_for_this_answer">enter mark for this answer</string>
    <string name="get_all_score">get all score</string>
    <string name="get_no_score">get no score</string>
</resources>