<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUp"
    android:background="@drawable/mainbg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="359dp"
        android:layout_height="650dp"
        android:alpha=".86"
        android:background="@drawable/shape_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493"

        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="50dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="342dp"
            android:layout_height="57dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/myshape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".72"
                android:background="@drawable/myshape"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:textColorHint="#F2F2F2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="340dp"
            android:layout_height="57dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/myshape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="340dp"
                android:layout_height="59dp"
                android:alpha=".72"
                android:background="@drawable/myshape"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:textColorHint="#F2F2F2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="340dp"
            android:layout_height="57dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/myshape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="342dp"
                android:layout_height="60dp"
                android:alpha=".72"
                android:background="@drawable/myshape"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:textColorHint="#F2F2F2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="340dp"
            android:layout_height="57dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/myshape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="340dp"
                android:layout_height="59dp"
                android:alpha=".72"
                android:background="@drawable/myshape"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:textColorHint="#F2F2F2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="336dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

            <Button
                android:id="@+id/button5"
                android:layout_width="168dp"
                android:layout_height="match_parent"
                android:background="@drawable/student_btn"
                android:text="@string/student"
                android:textColor="#006C7A"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:background="@drawable/teacher_btn"
                android:text="@string/teacher"
                android:textColor="#72f2f2f2"
                android:textDirection="anyRtl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="342dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />

        <Button
            android:id="@+id/button2"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/hidden_btn"
            android:text="@string/valid_acount"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>