<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mainbg"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="323dp"
        android:layout_height="514dp"
        android:alpha=".86"
        android:background="@drawable/shape_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="#fff"

            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:background="@drawable/myshape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.336">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="48dp"
                android:layout_height="53dp"
                android:background="#29FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_person_outline_24" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="260dp"
                android:layout_height="52dp"
                android:background="#29FFFFFF"
                android:ems="10"
                android:hint="@string/getting_username"
                android:inputType="textPersonName"
                android:textColorHint="#f2f2f2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="244dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/myshape">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="44dp"
                android:layout_height="56dp"
                android:background="#29FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_lock_24" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="260dp"
                android:layout_height="52dp"
                android:layout_marginStart="4dp"
                android:background="#29FFFFFF"
                android:ems="10"
                android:hint="@string/getting_password"
                android:inputType="textPersonName"
                android:textColorHint="#f2f2f2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="185dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/remembering"
            android:textColor="#f2f2f2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="283dp"
            android:layout_height="48dp"
            android:layout_marginBottom="96dp"

            android:background="#fff"
            android:text="@string/sign_in"
            android:textColor="#fff"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="103dp"
            android:layout_height="44dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"

            android:text="@string/sign_up"
            android:textColor="#f2f2f2"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>